update std_acc function name on example

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## std_Acc\n",
+    "## std_acc\n",
     "\n",
     "This function generates standard deviation of predicted array and observed array associated with number of discretization k in KNN, Decision Tree, or other model with discrete hyperparameter models. It is another approach to find the best parameter of the model to use mean and standard deviation of the series of accuracy. The predicted values and test values are required to run this function. We will continue to work on the Iris data and the KNN model. To make it easy to understand, we will fit the model again without using `final_Model` function."
    ]
@@ -297,7 +297,7 @@
     "# Fitting the model, and predict the value\n",
     "Ks = 50\n",
     "mean_acc = np.zeros((Ks-1))\n",
-    "sd_acc = np.zeros((Ks-1))\n",
+    "std_acc_output = np.zeros((Ks-1))\n",
     "\n",
     "for n in range(1, Ks):\n",
     "    neigh = KNeighborsClassifier(n_neighbors = n).fit(X_train,y_train)\n",
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd_acc = std_acc.std_Acc(yhat,y_test,Ks)"
+    "sd_acc_output = std_acc.std_acc(yhat,y_test,Ks)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "source": [
     "## line_plot\n",
     "\n",
-    "The `line_plot` function can plot a linear relationship nicely given a series of defined parameters. It is useful in visualize the data analysis result. It it specifically designed to visualize the accuracy distribution of the Zoo analysis. The input is mostly from the `std_Acc` function. We will use the results from the previous parts in this function."
+    "The `line_plot` function can plot a linear relationship nicely given a series of defined parameters. It is useful in visualize the data analysis result. It it specifically designed to visualize the accuracy distribution of the Zoo analysis. The input is mostly from the `std_acc` function. We will use the results from the previous parts in this function."
    ]
   },
   {
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "line_plot.line_plot(Ks, mean_acc, sd_acc, \"Number of Neighbors (K)\", \"Accuracy\", \"fig.2 Number of Neighbors vs. Accuracy\");"
+    "line_plot.line_plot(Ks, mean_acc, sd_acc_output, \"Number of Neighbors (K)\", \"Accuracy\", \"fig.2 Number of Neighbors vs. Accuracy\");"
    ]
   },
   {
